--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "11.13.4",
     "@types/react": "16.8.13",
     "@types/react-dom": "16.8.4",
+    "@types/styled-components": "^4.1.14",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
     "typescript": "3.4.3"
   },
   "scripts": {
