--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.4.3",
+    "@types/chai": "^4.1.7",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.11",
     "@types/node": "^11.13.5",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/styled-components": "^4.1.14",
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
